# ragflow

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  DOCKER.md  Dockerfile  NEXT_STEPS.md  Procfile  RAGFlow.postman_collection.json  README.md  alembic.ini  app_streamlit.py  check_recent.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_api.py  start_api.py  test_async_validation.py  test_new_worker.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_create_documents.py  002_create_chunks.py  003_create_queries.py  004_create_answers.py  005_create_query_results.py  006_create_escalation_requests.py  007_create_embedding_jobs.py  008_create_audit_events.py  009_create_collections.py
sample_data/: documents_for_ingestion.json  olist_reviews_sample.csv  processed_reviews.json
scripts/: add_missing_columns.py  check_failures.py  check_implementation.py  check_query_batch.py  check_query_status.py  generate_embeddings.py  ingest_reviews.py  process_reviews.py  purge_queue.py  seed_collections.py  start_api_8001.py  test_10_queries.py  test_api.py  test_one_query.py  test_query_worker.py  test_semantic_search.py
specs/001-rag-qa-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-qa-system/checklists/: requirements.md
specs/001-rag-qa-system/contracts/: openapi.yaml  rabbitmq-messages.yaml
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/routes/: collections.py  documents.py  health.py  query.py
src/cli/: create_collection.py
src/lib/: __init__.py  cache.py  config.py  database.py  exceptions.py  logger.py  observability.py  queue.py  vector_db.py
src/models/: __init__.py  audit.py  document.py  escalation.py  messages.py  orm.py  query.py
src/repositories/: __init__.py  cache_repo.py  document_repo.py  query_repo.py  vector_repo.py
src/services/: __init__.py  embedding_service.py  generation_service.py  guardrails_service.py  retrieval_service.py
src/workers/: __init__.py  base_worker.py  query_worker.py
tests/: test_all_services.py  test_api_endpoints.py  test_database_schema.py  test_openai_connection.py  test_qdrant_connection.py  test_rabbitmq_connection.py  test_services.py  test_supabase_api.py  test_supabase_connection.py
